--- a/character_list.html
+++ b/character_list.html
@@ -1,47 +1,62 @@
-- Mitth'kade'val (Kade) | Spy, Vigilante, Double Agent
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Character List</title>
+</head>
+<body>
+    <h1>Character List</h1>
+    <ul>
+
+<li>Mitth'kade'val (Kade) | Spy, Vigilante, Double Agent</li>
   
-- Datura Aedryn | Light-Side Sith
+<li>Datura Aedryn | Light-Side Sith</li>
   
-- Qar'rah Aedryn | Jedi Master, Grand Healer
+<li>Qar'rah Aedryn | Jedi Master, Grand Healer</li>
   
-- Ciaran Sol | Jedi, Eternal Alliance Commander
+<li>Ciaran Sol | Jedi, Eternal Alliance Commander</li>
   
-- Tera Veriditas (Church) | Former Jedi, Adventurer
+<li>Tera Veriditas (Church) | Former Jedi, Adventurer</li>
   
-- Aspera Veriditas (Aspera Cadera) | Bounty Hunter, Mandalorian
+<li>Aspera Veriditas (Aspera Cadera) | Bounty Hunter, Mandalorian</li>
   
-- Mathir Anora (Riven) | Jedi, Archeologist
+<li>Mathir Anora (Riven) | Jedi, Archeologist</li>
   
-- Hazen Juzul | Jedi Master, Teacher
+<li>Hazen Juzul | Jedi Master, Teacher</li>
   
-- Selaya Saren | Commander of Havoc Squad
+<li>Selaya Saren | Commander of Havoc Squad</li>
   
-- Barrin Press | Lieutenant Commander of Havoc Squad
+<li>Barrin Press | Lieutenant Commander of Havoc Squad</li>
   
-- Velira Carys | Smuggler, Republic Freedom-Fighter
+<li>Velira Carys | Smuggler, Republic Freedom-Fighter</li>
   
-- Carta Heelo | Former Refugee Liberator, Anti-Imperial Fighter
+<li>Carta Heelo | Former Refugee Liberator, Anti-Imperial Fighter</li>
   
-- Fey'lu | Smuggler, Contraband Collector
+<li>Fey'lu | Smuggler, Contraband Collector</li>
   
-- Sahira Lorale | Force-Sensitive Miraluka Mystic
+<li>Sahira Lorale | Force-Sensitive Miraluka Mystic</li>
   
-- Selaren Vizhan | Historial, Force Spirit-Talker
+<li>Selaren Vizhan | Historial, Force Spirit-Talker</li>
   
-- Mastrodynesus (All-Killer) | Ancient Sith, Soul-bound Destroyer
+<li>Mastrodynesus (All-Killer) | Ancient Sith, Soul-bound Destroyer</li>
   
-- Myrmadous | Sith Lord, All-Killer's Deciple
+<li>Myrmadous | Sith Lord, All-Killer's Deciple</li>
   
-- Yamio Zoja | Sith Sorceress, Recluse
+<li>Yamio Zoja | Sith Sorceress, Recluse</li>
   
-- Vael Cyrn | Dark Side Cultis
+<li>Vael Cyrn | Dark Side Cultis</li>
   
-- Dae'dra Tia | Tia twin, cyborg, Sith Lord
+<li>Dae'dra Tia | Tia twin, cyborg, Sith Lord</li>
   
-- Neyara Tia | Tia twin, cyborg, Sith Lord
+<li>Neyara Tia | Tia twin, cyborg, Sith Lord</li>
   
-- Darth Dire | Zabrak Sith Lord, imperialist
+<li>Darth Dire | Zabrak Sith Lord, imperialist</li>
   
-- Drev'os Thal | Mercenary, Jedi/Sith hunter
+<li>Drev'os Thal | Mercenary, Jedi/Sith hunter</li>
   
-- Teer Kurs | Bounty Hunter, Avenger
+<li>Teer Kurs | Bounty Hunter, Avenger</li>
+
+      </ul>
+</body>
+</html>
