--- a/character_list.html
+++ b/character_list.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    li {
+        margin-bottom: 10px; /* Adjust space as needed */
+    }
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character List</title>
