--- a/character_list.html
+++ b/character_list.html
@@ -11,6 +11,7 @@
     <title>Character List</title>
 </head>
 <body>
+    <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
     <h1>Character List</h1>
     <ul>
 
