--- a/character_list.html
+++ b/character_list.html
@@ -11,6 +11,7 @@
     <title>Character List</title>
 </head>
 <body>
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
     <h1>Character List</h1>
     <ul>
@@ -64,5 +65,6 @@
 <li>Teer Kurs | Bounty Hunter, Avenger</li>
 
       </ul>
+    </div>
 </body>
 </html>
