--- a/character_list.html
+++ b/character_list.html
@@ -2,20 +2,27 @@
 <html lang="en">
 <head>
     <style>
-    li {
-        margin-bottom: 10px; /* Adjust space as needed */
-    }
-</style>
+        li {
+            margin-bottom: 10px; /* Adjust space as needed */
+        }
+        .center-link {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character List</title>
 </head>
 <body>
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
-    <h1>Character List</h1>
-    <ul>
+    <div class="center-link">
+        <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
+    </div>
 
+    <h1 style="text-align: center;">Character List</h1>
+    
+    <ul>
 <li>Mitth'kade'val (Kade) | Spy, Vigilante, Double Agent</li>
   
 <li>Datura Aedryn | Light-Side Sith</li>
@@ -65,6 +72,5 @@
 <li>Teer Kurs | Bounty Hunter, Avenger</li>
 
       </ul>
-    </div>
 </body>
 </html>
