--- a/character_list.html
+++ b/character_list.html
@@ -58,7 +58,7 @@
   
 <li>Yamio Zoja | Sith Sorceress, Recluse</li>
   
-<li>Vael Cyrn | Dark Side Cultis</li>
+<li>Vael Cyrn | Dark Side Cultist</li>
   
 <li>Dae'dra Tia | Tia twin, cyborg, Sith Lord</li>
   
