--- a/character_list.html
+++ b/character_list.html
@@ -3,12 +3,16 @@
 <head>
     <style>
         li {
-            margin-bottom: 10px; /* Adjust space as needed */
+            margin-bottom: 10px;
+            text-align: center;
         }
         .center-link {
             display: flex;
             justify-content: center;
             margin-bottom: 20px;
+        }
+        .center-content {
+            text-align: center;
         }
     </style>
     <meta charset="UTF-8">
@@ -18,10 +22,11 @@
 <body>
     <div class="center-link">
         <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
+    </div>
 
-    <h1 style="text-align: center;">Character List</h1>
-    
-    <ul>
+    <div class="center-content">
+        <h1>Character List</h1>
+        <ul style="list-style-type: none; padding: 0;">
 <li>Mitth'kade'val (Kade) | Spy, Vigilante, Double Agent</li>
   
 <li>Datura Aedryn | Light-Side Sith</li>
