--- a/character_list.html
+++ b/character_list.html
@@ -27,7 +27,7 @@
     <div class="center-content">
         <h1>Character List</h1>
         <ul style="list-style-type: none; padding: 0;">
-<li><a href="Kade_2.html">Mitth'kade'val (Kade)</a> | Spy, Vigilante, Double Agent</li>
+<li><a href="Kade.html">Mitth'kade'val (Kade)</a> | Spy, Vigilante, Double Agent</li>
   
 <li>Datura Aedryn | Light-Side Sith</li>
   
