--- a/Kade.html
+++ b/Kade.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mitth'kade'val (Kade)</title>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif;">
+    <div class="center-link">
+        <a href="https://cronyx2000.github.io/memorykeepsakeforswtororother/">Return to Home Page</a>
+    </div>
     <h1>Mitth'kade'val (Kade)</h1>
 
     <img src="https://github.com/Cronyx2000/memorykeepsakeforswtororother/blob/e154f926b5d6ea67c3e55d16e6f2983f46e2e054/20241024183143_1.jpg?raw=true" alt="Mitth'kade'val (Kade)">
-    <p><em>Brief image description here.</em></p>
 
     <h2>Basic Information</h2>
     <ul>
