--- a/Kade.html
+++ b/Kade.html
@@ -50,7 +50,7 @@
     <h2>Background</h2>
     <ul>
         <li><strong>Origin/Homeworld</strong>: Csilla</li>
-        <li><strong>Childhood</strong>: Details here.</li>
+        <li><strong>Childhood</strong>: Mitth'Kade'Val, or Kade, was born into a prominant Chiss family on the olanet Csilla. Her father was a high ranking member of the Chiss Ascendancy. Unlike his sibling, he had no children. He desired an heir to his legacy so he married and planned on starting a family. Kade was born, and as soon as she was able to walk, her father began shaping her to be his replacement. He was unloving and only cared for her to exceed all expectations. Kade hardly had a true childhood, and was quickly indoctrinated into the militaristic and ruthless world of Chiss leadership. By the time she was 15 she had completed all of her formal education, training, and was able to join the Ascendancy in full. She was there for less than two years, before she wanted out. With her skills and knowledge the only path she saw possible was escape to the Empire. As soon as she was able, she fled Csilla and ran to  </li>
         <li><strong>Early Adulthood</strong>: Details here.</li>
     </ul>
 
